--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="../CSS MySite/CSS - My Site Images/CSS - My Site Images/AshishPhoto-modified.png" alt="My-Image"
+            <img src="AshishPhoto-modified.png" alt="My-Image"
                 class="image">
             <h2>Hello.</h2>
             <p class="introduction">I'm a web developer and programmer based in Mumbai, India.I ❤️ to play Chess.
@@ -36,7 +36,7 @@
             <h2>My Skills.</h2>
             <div class="skill-row">
                 <img class="computer"
-                    src="../CSS MySite/CSS - My Site Images/CSS - My Site Images/computer-modified.png" alt="my-skills">
+                    src="computer-modified.png" alt="my-skills">
                 <h3>Design and Development</h3>
                 <p class="code-skill-description">I am a passionate developer and a programmer.I am learning to code
                     since 18 because I wanted to make
